add modal component and update alert

--- a/HTML/1-alert/alert-1/index.html
+++ b/HTML/1-alert/alert-1/index.html
@@ -14,7 +14,9 @@
       A simple secondary alert—check it out!
     </div>
     <br />
-    <div class="alert alert-sucess">A simple success alert—check it out!</div>
+    <div class="alert alert-sucess">
+      update A simple success alert—check it out!
+    </div>
     <br />
     <div class="alert alert-danger">A simple danger alert—check it out!</div>
     <br />
